# credit-decision-pipeline

./: .gitignore  Makefile  README.md  architecture.md  environment.yml  pyproject.toml  requirements.txt  run.ps1  run.py  run.sh  setup.ps1  setup.sh
dashboard/: app.py
data/sample/: README.md  _ground_truth.json
data/sample/aecb/: 784197054189348_2026-04-18.xml  784197129351134_2026-04-18.xml  784197320226985_2026-04-18.xml  784197395199481_2026-04-18.xml  784197445397049_2026-04-18.xml  784197484345008_2026-04-18.xml  784197546681363_2026-04-18.xml  784197591535661_2026-04-18.xml  784197632530314_2026-04-18.xml  784197673774594_2026-04-18.xml  784197751308089_2026-04-18.xml  784197946123655_2026-04-18.xml  784197982106242_2026-04-18.xml  784198080826689_2026-04-18.xml  784198241911758_2026-04-18.xml  784198280539186_2026-04-18.xml  (+34 more)
docs/: aecb_sample.xml  design_decisions.md
src/: config.py  models.py
src/audit/: __init__.py  replay.py  snapshot_writer.py
src/bronze/: __init__.py  land.py
src/data_generation/: generate.py
src/decision/: __init__.py  engine.py  tasks.py
src/dq/: __init__.py  rules.py  runner.py
src/gold/: __init__.py  decision_vector.py  portfolio_mart.py
src/orchestration/: __init__.py  dag.py  registry.py
src/silver/: __init__.py  _io.py  conflict_log.py  entity_resolution.py  parse_aecb.py  parse_aml.py  parse_fraud.py  parse_profile.py  run_silver.py
tests/: conftest.py  test_aecb_parser.py  test_behavioural_features.py  test_dag.py  test_dq_rules.py  test_entity_resolution.py  test_pii_minimisation.py  test_snapshot_chain.py
(+7 files in other folders)
