[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-pipeline-demo"
version = "0.1.0"
description = "Unified credit decision-input data pipeline — demo"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.0",
    "streamlit>=1.30",
    "rapidfuzz>=3.5",
    "faker>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
